[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "selray"
version = "1.0.0"
description = "Authorized WPA2-Enterprise username format and EAP settings tester."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
]

[project.scripts]
selray = "main:main"
